# weaver

./: .gitignore  CLAUDE.md  DEMO_KNOWLEDGE_GRAPH.md  pyproject.toml
.github/workflows/: publish.yml
src/: __init__.py  __main__.py  cli.py
src/generators/: base.py  cookiecutter.py
src/weaver/: cli.py
src/weaver/templates/entity-resolution/{{cookiecutter.project_slug}}/src/ontology/: llm_designer.py
